--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,6 +21,7 @@ stages:
 publish-package:
   stage: publish
   script:
+    - apt install curl -y
     - curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python -
     # - poetry install
     # - poetry version patch
