--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,10 +21,10 @@ stages:
 publish-package:
   stage: publish
   script:
-    - apk add --no-cache libffi-dev openssl-dev curl
-    - curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py | python -
-    - export PATH="/root/.local/bin:$PATH"
-    # - pip install poetry
+    - apk add --no-cache libffi-dev openssl-dev build-base
+    # - curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py | python -
+    # - tee export PATH="/root/.local/bin:$PATH"
+    - pip install poetry
     # - poetry install
     # - poetry version patch
     - poetry config repositories.gitlab https://gitlab.com/api/v4/projects/${CI_PROJECT_ID}/packages/pypi
