--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,16 +21,16 @@ stages:
 publish-package:
   stage: publish
   script:
-    - apk add --no-cache libffi-dev openssl-dev build-base
-    # - curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py | python -
+    - apk add --no-cache libffi-dev openssl-dev curl
+    - curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/install-poetry.py | python -
     # - tee export PATH="/root/.local/bin:$PATH"
-    - pip install poetry
+    # - pip install poetry
     # - poetry install
     # - poetry version patch
-    - poetry config repositories.gitlab https://gitlab.com/api/v4/projects/${CI_PROJECT_ID}/packages/pypi
-    - poetry config http-basic.gitlab gitlab-ci-token ${CI_JOB_TOKEN}
-    - poetry build
-    - poetry publish -r gitlab
+    - /root/.local/bin/poetry config repositories.gitlab https://gitlab.com/api/v4/projects/${CI_PROJECT_ID}/packages/pypi
+    - /root/.local/bin/poetry config http-basic.gitlab gitlab-ci-token ${CI_JOB_TOKEN}
+    - /root/.local/bin/poetry build
+    - /root/.local/bin/poetry publish -r gitlab
 
   only:
     - master
