--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ isort = "^5.8.0"
 pymongo-stubs = "^0.1.0"
 pytest-asyncio = "^0.15.1"
 taskipy = "^1.8.1"
+testcontainers = "^3.4.2"
 
 [[tool.poetry.source]]
 name = "gitlab-overlead"
