--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
-__pycache__
-.venv
-.mypy_cache
-.vscode
-.mongodb
-dist
+.venv/
+.mongodb/
+
+.cache/
+.mypy_cache/
+.ruff_cache/
+__pycache__/
+
+.python-version
+
+dist/
