--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,39 +1,129 @@
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
+
 [tool.poetry]
 name = "overlead-odm"
-version = "0.4.1"
-description = ""
-authors = ["Your Name <you@example.com>"]
+version = "0.5.0"
+description = "overlead mongodb odm"
+authors = ["Anton <myprojectorterrypratchett@gmail.com>"]
 packages = [
   { include = "overlead", from = "src" },
-  { include = "*", from = "typings" }
+  { include = "*", from = "stubs" },
 ]
 
 [tool.poetry.dependencies]
-python = "^3.9"
-pydantic = "^1.10.0"
-pymongo = "^3.11.4"
-motor = "^2.4.0"
+python = "~3.11"
+pydantic = "^1.10.7"
+pymongo = "^4.3.3"
+motor = "^3.1.2"
 orjson = "^3.5.3"
+wrapt = "^1.15.0"
+motor-types = "^1.0.0b2"
 
-[tool.poetry.dev-dependencies]
-pytest = "^5.2"
-mypy = "^0.961"
-yapf = "^0.31.0"
-flake8 = "^3.9.2"
-isort = "^5.8.0"
-pymongo-stubs = "^0.1.0"
+[tool.poetry.group.dev.dependencies]
+taskipy = "^1.10.2"
+pre-commit = "^3.3.1"
+fastapi = "^0.95.2"
+
+[tool.poetry.group.linting.dependencies]
+ruff = "^0.0.254"
+black = "^23.3.0"
+mypy = "^1.2"
+
+[tool.poetry.group.testing.dependencies]
+pytest = "^7.3.1"
 pytest-asyncio = "^0.15.1"
-taskipy = "^1.8.1"
-testcontainers = "^3.4.2"
+testcontainers = "^3.7.1"
+coverage = "^7.2.5"
 
 [[tool.poetry.source]]
 name = "gitlab-overlead"
 url = "https://gitlab.com/api/v4/groups/2174930/-/packages/pypi/simple"
 
 [tool.taskipy.tasks]
-lint = "mypy src/"
-test = "pytest ."
+lint-mypy = "mypy ."
+lint-ruff = "ruff check ."
+lint = "task lint-ruff && task lint-mypy"
+test = "coverage run -m pytest"
 
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+[tool.mypy]
+plugins = ["pydantic.mypy"]
+cache_dir = ".mypy_cache"
+namespace_packages = true
+explicit_package_bases = true
+mypy_path = "$MYPY_CONFIG_FILE_DIR/src:$MYPY_CONFIG_FILE_DIR/stubs:$MYPY_CONFIG_FILE_DIR/tests"
+enable_incomplete_feature = 'TypeVarTuple'
+strict = true
+### Pydantic recommendations
+follow_imports = "silent"
+warn_redundant_casts = true
+warn_unused_ignores = true
+disallow_any_generics = true
+check_untyped_defs = true
+no_implicit_reexport = true
+# for strict mypy: (this is the tricky one :-))
+disallow_untyped_defs = true
+
+[tool.pydantic-mypy]
+init_forbid_extra = true
+init_typed = true
+warn_required_dynamic_aliases = true
+warn_untyped_fields = true
+
+[tool.ruff]
+isort = { known-first-party = ['overlead', 'tests'] }
+select = ['ALL']
+ignore = [
+  'ANN101',
+  "D105",
+  "D107",
+  "D100",
+  "D104",
+  "D203",
+  'D212',
+  'RUF001',
+  'RUF002',
+  'RUF003',
+  'S101',
+  'ANN401',
+  'ANN102',
+  "FBT001",
+  "FBT002",
+  "ERA001",
+  "A003",
+]
+fixable = ['I', 'COM', 'Q000', 'UP035']
+
+exclude = [
+  ".bzr",
+  ".direnv",
+  ".eggs",
+  ".git",
+  ".git-rewrite",
+  ".hg",
+  ".mypy_cache",
+  ".nox",
+  ".pants.d",
+  ".pytype",
+  ".ruff_cache",
+  ".svn",
+  ".tox",
+  ".venv",
+  "__pypackages__",
+  "_build",
+  "buck-out",
+  "build",
+  "dist",
+  "node_modules",
+  "venv",
+]
+line-length = 88
+target-version = "py311"
+
+[tool.ruff.mccabe]
+max-complexity = 10
+
+[tool.ruff.per-file-ignores]
+"tests/**.py" = ["D", 'INP001']
+"stubs/**.pyi" = ["D", "ARG001"]
