--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "overlead-odm"
-version = "0.5.1"
+version = "0.5.2"
 description = "overlead mongodb odm"
 authors = ["Anton <myprojectorterrypratchett@gmail.com>"]
 packages = [
@@ -14,12 +14,12 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "~3.11"
-pydantic = "^1.10.7"
-pymongo = "^4.3.3"
-motor = "^3.1.2"
-orjson = "^3.5.3"
-wrapt = "^1.15.0"
-motor-types = "^1.0.0b2"
+pydantic = "~1.10.7"
+pymongo = "~4.3.3"
+motor = "~3.1.2"
+orjson = "~3.5.3"
+wrapt = "~1.15.0"
+motor-types = "~1.0.0b2"
 
 [tool.poetry.group.dev.dependencies]
 taskipy = "^1.10.2"
